# Rus

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: tests.yml
api/: Cargo.toml
api/src/: api.rs  conf.rs  errors.rs  jobs.rs  lib.rs  routes.rs
api/static/css/: normalize.css  style.css
api/templates/: edit.html.tera  index.html  index.html.tera  layout.html.tera  new.html.tera
api/templates/error/: 404.html.tera
client/: dev.sh  optimize.sh
client/src/: Convert.elm  Main.elm  Page.elm  Redirection.elm  Session.elm
client/src/Pages/: Create.elm  Edit.elm  Error.elm  Home.elm
core/: Cargo.toml
core/src/: cache.rs  errors.rs  lib.rs  mutation.rs  query.rs
core/tests/: mock.rs  prepare.rs
entity/: Cargo.toml
entity/src/: lib.rs  redirection.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20221110_195452_create_redirection_table.rs
src/: main.rs
