[package]
name = "rus-api"
version = "0.1.0"
authors = ["AzariasB"]
edition = "2021"
publish = false

[dependencies]
rus-core = { path = "../core" }
actix-files = "0.6"
actix-http = "3"
actix-rt = "2.7"
actix-service = "2"
actix-web = "4"
dotenvy = "0.15"
listenfd = "0.5"
serde = "1"
url = "2.3.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
entity = { path = "../entity" }
migration = { path = "../migration" }
log = "0.4.17"
env_logger = "0.9.3"
tokio_schedule = "0.3.0"