[package]
name = "rus-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "../entity" }
sea-orm = { version = "^0.10.2", features = [
    "debug-print",
    "runtime-async-std-native-tls",
    "sqlx-postgres"
] }
rand = "0.8.5"
redis = "0.22.1"
derive_more = "0.99.17"


[dev-dependencies]
tokio = { version = "1.20.0", features = ["macros", "rt"] }

[features]
mock = ["sea-orm/mock"]

[[test]]
name = "mock"
required-features = ["mock"]
